# kid

./: .gitignore  README.md  Setup.hs  cabal.project  cabal.project.local  flake.nix  kid.cabal
.github/workflows/: ci.yml
app/: Main.hs  MimeTypes.hs  Server.hs
src/fut/: Calculation.fut  Makefile  Payoff.fut
src/hs/KID/: Calculation.hs  Data.hs  Document.hs  Domain.hs
src/hs/KID/Calculation/: Futhark.hs
src/hs/KID/Data/: File.hs  Quandl.hs
test/: Spec.hs
test/example/: contract-file.json  contract.json
test/example/data/: underlying.csv
